[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "Python-Avatar"
version = "0.2.1"
authors = [
  { name= "willtheorangeguy" },
]
description = "Easily display all of your creative avatars to keep them consistent across websites."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Utilities',
]

[project.urls]
"Homepage" = "https://github.com/willtheorangeguy/PyAvatar"
"Bug Tracker" = "https://github.com/willtheorangeguy/PyAvatar/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["PyAvatar"]
